--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="ObjectMapper" default="dist" basedir=".">
+<project name="ResultObjectMapper" default="dist" basedir=".">
     <description>
         ORM layer to map the SQL Query results to Java Classes
     </description>
@@ -9,7 +9,7 @@
     <property name="build" location="build" />
     <property name="dist" location="dist" />
     <property name="test" location="tests" />
-    <property name="build.test" location="test_build" />
+    <property name="build.test" location="${build}/tests" />
     
     <target name="init">
         <!-- Create the time stamp -->
@@ -21,8 +21,9 @@
     <target name="compile" depends="init,clean,makedir" description="compile the source">
         <!-- Compile the java code from ${src} into ${build} -->
         <javac srcdir="${src}" destdir="${build}" debug="on" deprecation="on" includeantruntime="false"/>
+    	<!-- Compile the test code from ${test} to ${build.test} -->
         <javac srcdir="${test}" destdir="${build.test}" debug="on" deprecation="on" includeantruntime="false">
-        	<classpath refid="lib.class.path" />
+        	<classpath refid="junit.class.path" />
         </javac>
     </target>
     
@@ -46,15 +47,13 @@
 		<mkdir dir="${build.test}" />
 	</target>
     
+	<!-- unit test -->
     <target name="junit" depends="compile">
 		<junit printsummary="on" fork="true" haltonfailure="yes">
 			<classpath refid="junit.class.path" />
-			<classpath>
-				<pathelement location="${build.test}"/>
-			</classpath>
-			<!-- <formatter type="xml" /> -->
+			<classpath location="${build.test}"/>
 			<formatter type="plain" usefile="false" />
-			<batchtest todir="${build.report}">
+			<batchtest todir="${build.test}">
 				<fileset dir="${test}">
 					<include name="**/*Test*.java" />
 				</fileset>
@@ -62,12 +61,14 @@
 		</junit>
 	</target>
 	
+	<!-- library path -->
 	<path id="lib.class.path">
 		<fileset dir="${lib}">
 			<include name="**/*.jar" />
 		</fileset>
 	</path>
 	
+	<!-- unit test libary and src class path -->
 	<path id="junit.class.path">
 		<fileset dir="${lib}">
 			<include name="**/*.jar" />
